גרטן תפוחי אדמה

--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>געזונטהייטס</li>
 
+<li>גרטן תפו&quot;א</li>
+
 <li>דיוויד בואי</li>
 
 <li>דןדן</li>
@@ -321,7 +323,7 @@ Error message and password prompt
 
 <li>הסינים</li>
 
-<li>הסיפור על גורה, שסופר לאווה, על ידי יויו.</li>
+<li>הסיפור על גורה, שסופר לאווה, על ידי יויו</li>
 
 <li>הספנית</li>
 
@@ -8278,7 +8280,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מלפפונים חמוצים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8298,8 +8300,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170407144029191" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170409201539551" title="$:/temp/search">
+<pre> </pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8482,14 +8484,14 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161215192348716" modified="20170406163530804" title="אווה כהן">
+<div created="20161215192348716" modified="20170409201143078" title="אווה כהן">
 <pre>[img[pictures/7h68QEIPyKEHEZ8B.jpg]]
 
 
 !!![[גורה]]:
 
 
-מכל האנשים שהגיעו אלינו, הסיפור עם אווה הוא המוזר ביותר ולא בגללה, כי אם בגלל שיויו, שבאותה תקופה גר בשוק הפשפשים ביפו, ונהג לשתות קפה אצל [[פועה]], פשוט פנה יום אחד אל אווה, שהייתה קונדיטורית שם, [[ושאל אותה אם הוא יכול לדבר איתה|הסיפור על גורה, שסופר לאווה, על ידי יויו.]] תוך כמה דקות מרגע תחילת פגישתם הראשונה הוא סיפר לה עלי ועליו כפי שמסופר בסיפור הראשון ב&quot;אגב בתוך אגב&quot;. 
+מכל האנשים שהגיעו אלינו, הסיפור עם אווה הוא המוזר ביותר ולא בגללה, כי אם בגלל שיויו, שבאותה תקופה גר בשוק הפשפשים ביפו, ונהג לשתות קפה אצל [[פועה]], פשוט פנה יום אחד אל אווה, שהייתה קונדיטורית שם, [[ושאל אותה אם הוא יכול לדבר איתה|הסיפור על גורה, שסופר לאווה, על ידי יויו]] תוך כמה דקות מרגע תחילת פגישתם הראשונה הוא סיפר לה עלי ועליו כפי שמסופר בסיפור הראשון ב&quot;אגב בתוך אגב&quot;. 
 
 אווה היא אישה בת 51 כמעט, נכון לעכשיו, יש לה בת בת כמעט 21 ששמה [[איריס|איריס הבת]], ובארוחת כריסמס של לפני שנה כמעט, היא נפגשה עם [[ד&quot;ר פיליפ לומבר|פיליפ]], הפסיכיאטר שלי, אותו אהבה מאז הייתה בת עשרים ומשהו והוא אותה.
 
@@ -8525,7 +8527,7 @@ Error message and password prompt
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170406152629569" title="אירי">
+<div created="20161206200127567" modified="20170409201107138" title="אירי">
 <pre>[img[pictures/B6sqcxD28MtPcDif.JPG]]
 
 !!![[אלפרד]]:
@@ -8852,6 +8854,33 @@ Error message and password prompt
 לבניין גם מרתף בו גר [[סטאלין]], שרת הבניין. במרתף נמצאים גם המחסנים.
 
 געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
+</div>
+<div created="20170409193149814" modified="20170409201515093" title="גרטן תפו&quot;א">
+<pre>[img[pictures/gratin.jpg]]
+
+
+!!![[דניאל]]:
+
+* ק''ג תפוחי אדמה
+* פלפל שחור גרוס
+ * אגוז מוסקט מגורר 
+*  2 שיני שום כתושות
+*   75 גרם גבינת גרוייר מגוררת
+*   חצי כוס חלב
+* מיכל שמנת מתוקה
+
+
+
+* מחממים תנור ל-170 מעלות.
+*פורסים קילו תפוחי אדמה לאפייה במנדולינה, במעבד מזון או בסכין חדה.
+*משמנים תבנית בסדר גודל של 16X24 ס&quot;מ.
+*מערבבים את השמנת המתוקה, החלב והתבלינים ויוצקים מעל תפוחי האדמה באופן שווה.
+* מפזרים מעט גבינה מגוררת ואופים 60-50 דקות, או עד שתפוחי האדמה רכים ושחומים והנוזלים נספגים.
+* מקררים רבע שעה ומגישים  
+
+
+
+</pre>
 </div>
 <div created="20170105154405192" modified="20170328190739523" title="דיוויד בואי">
 <pre>[img[pictures/4ysMCHnnsnnNyQ96.jpg]]
@@ -9221,7 +9250,7 @@ loving you</pre>
 
 המשך יבוא.</pre>
 </div>
-<div created="20170406162100924" modified="20170406163448416" title="הסיפור על גורה, שסופר לאווה, על ידי יויו.">
+<div created="20170406162100924" modified="20170409200942541" title="הסיפור על גורה, שסופר לאווה, על ידי יויו">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 !!![[גורה]]:
@@ -9671,7 +9700,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170409072011941" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170409193131545" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9700,7 +9729,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[עוגיות קימל]] - אווה 
 * [[תבשיל שורשים ואורז בשלושה צבעים]] -  אלפרד 
 * [[מלפפונים חמוצים]] - אלפרד 
-* גרטן תפו&quot;א - דניאל  
+* [[גרטן תפו&quot;א]] - דניאל  
 * פחזניות ממולאות בכבד קצוץ - אנג'ליק 
 * צנצנת עם חזרת - אנג'ליק
 * צלי בשר עם תפוחי אדמה - סוניה
@@ -10363,8 +10392,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20170409072116141" modified="20170409181758192" title="מלפפונים חמוצים">
-<pre>
-[img[pictures/melafefonim-chamuzim.jpg]]
+<pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
 !!![[אלפרד]]:
 
