גרטן תפוחי אדמה

--- a/index.html
+++ b/index.html
@@ -8250,7 +8250,7 @@ Error message and password prompt
 <div created="20161023183206341" modified="20161023183206341" title="$:/state/Link/-1328864002/search">
 <pre>http://legalize.org.il/download/cop-vox/</pre>
 </div>
-<div created="20161023182522696" modified="20170406173654000" title="$:/state/showeditpreview">
+<div created="20161023182522696" modified="20170409202455527" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
 <div created="20161024052836465" modified="20161024094639906" title="$:/state/sidebar">
@@ -8280,7 +8280,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[גרטן תפו&quot;א]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8300,8 +8300,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170409201539551" title="$:/temp/search">
-<pre> </pre>
+<div created="20161023184814872" modified="20170409201746710" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8855,28 +8855,38 @@ Error message and password prompt
 
 געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
 </div>
-<div created="20170409193149814" modified="20170409201515093" title="גרטן תפו&quot;א">
+<div created="20170409193149814" modified="20170409203043858" title="גרטן תפו&quot;א">
 <pre>[img[pictures/gratin.jpg]]
 
 
 !!![[דניאל]]:
 
-* ק''ג תפוחי אדמה
+זה המתכון שאני מכין לכל ארוחה שאני מוזמן אליה. אני יודע להכין שלושה דברים. גרטן תפוחי אדמה, סלט חסה וטירמיסו שפעם אימא של חבר שהיה לי לימדה אותי, בכוסות של ויסקי.
+
+החומרים הדרושים:
+
+* ק&quot;ג תפוחי אדמה
 * פלפל שחור גרוס
- * אגוז מוסקט מגורר 
-*  2 שיני שום כתושות
-*   75 גרם גבינת גרוייר מגוררת
-*   חצי כוס חלב
+* אגוז מוסקט מגורר 
+* 2 שיני שום כתושות
+* שליש כוס גבינת גרוייר מגוררת
+* חצי כוס חלב
 * מיכל שמנת מתוקה
 
 
 
-* מחממים תנור ל-170 מעלות.
-*פורסים קילו תפוחי אדמה לאפייה במנדולינה, במעבד מזון או בסכין חדה.
-*משמנים תבנית בסדר גודל של 16X24 ס&quot;מ.
-*מערבבים את השמנת המתוקה, החלב והתבלינים ויוצקים מעל תפוחי האדמה באופן שווה.
-* מפזרים מעט גבינה מגוררת ואופים 60-50 דקות, או עד שתפוחי האדמה רכים ושחומים והנוזלים נספגים.
-* מקררים רבע שעה ומגישים  
+1.  מחממים תנור ל-170 מעלות.
+
+2. פורסים קילו תפוחי אדמה לאפייה במנדולינה.
+
+3. משמנים תבנית בסדר גודל של 16X24 ס&quot;מ.
+
+4.מערבבים את השמנת המתוקה, החלב והתבלינים ויוצקים מעל תפוחי האדמה באופן שווה.
+
+5.מפזרים מעט גבינה מגוררת ואופים 60-50 דקות, או עד שתפוחי האדמה רכים ושחומים והנוזלים נספגים.
+
+
+6. מקררים רבע שעה ומגישים .
 
 
 
