פחזניות עם כבד קצוץ וחזרת

--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@ Error message and password prompt
 
 <li>ז'נבייב</li>
 
+<li>חזרת</li>
+
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
 <li>יויו</li>
@@ -416,6 +418,8 @@ Error message and password prompt
 <li>פה</li>
 
 <li>פועה</li>
+
+<li>פחזניות ממולאות בכבד קצוץ</li>
 
 <li>פיליפ</li>
 
@@ -8280,7 +8284,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[גרטן תפו&quot;א]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="חזרת [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8300,7 +8304,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170409201746710" title="$:/temp/search">
+<div created="20161023184814872" modified="20170411133339774" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9663,6 +9667,28 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
 </div>
+<div created="20170411155118410" modified="20170411160253199" title="חזרת">
+<pre>
+[img[pictures/chazeret.jpg]]
+
+[[!!!אנג'ליק]]:
+
+
+    200 גרם שורש חזרת טרי
+
+    1-2 סלקים קטנים קלופים, לא מבושלים
+
+    חצי כוס חומץ
+
+    כפית סוכר 
+
+    כפית מלח גס
+
+* טוחנים את שורש החזרת
+* מרסקים את הסלק על פומפיה דקה
+* מתבלים ומערבבים
+* שומרים במקרר בצנצנת סגורה</pre>
+</div>
 <div created="20170407152300115" modified="20170407153246036" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
 
@@ -9710,7 +9736,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170409193131545" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170411133229544" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9740,8 +9766,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[תבשיל שורשים ואורז בשלושה צבעים]] -  אלפרד 
 * [[מלפפונים חמוצים]] - אלפרד 
 * [[גרטן תפו&quot;א]] - דניאל  
-* פחזניות ממולאות בכבד קצוץ - אנג'ליק 
-* צנצנת עם חזרת - אנג'ליק
+* [[פחזניות ממולאות בכבד קצוץ]] - אנג'ליק 
+* [[צנצנת עם חזרת]] - אנג'ליק
 * צלי בשר עם תפוחי אדמה - סוניה
 * חמוצים סיניים - גואן יין
 * תרנגול הודו אפוי - ז'נבייב
@@ -10783,6 +10809,51 @@ __אופן ההכנה____
 הקפה-מסעדה שהוקם ב-1999 ממשיך לעבוד. 
 
 שם יויו דיבר עם [[אווה|אווה כהן]] בפעם הראשונה.</pre>
+</div>
+<div created="20170411134035592" modified="20170411155025630" title="פחזניות ממולאות בכבד קצוץ">
+<pre>[img[pictures/pachzaniyot.jpg]]
+
+!!![[אנג'ליק]]:
+
+
+כבד קצוץ:
+
+* מבשלים ארבע ביצים קשות ולאחר שמוכנות קולפים אותן ומניחים בצד..
+* במחבת כבדה וחמה צולים חצי קילוגרם כבד עוף נקי. בשלב הראשון  צולים ללא כל שומן, וכעבור מספר דקות של צלייה משני הצדדים, מוסיפים 25 גרם, וממשיכים עד - מבחינתי - שאין דם.
+* מעבירים את הכבדים לקערה, ובאותה המחבת מוסיפים עשרה גרם חמאה ומטגנים את הבצלים עד הזהבתם.
+* במכונת בשר טוחנים את הכבד המוכן, הבצל והביצים הקשות. מתבלים במלח גס ופלפל שחור גרוס ושומרים במקרר.
+
+*** אם אין ברשותכם מכונת בשר אפשר לטחון (בפולסים עדינים) במעבד מזון, או לחתוך בסכין חדה.
+
+
+
+פחזניות:
+
+בצק הפחזניות הוא [[בצק רבוך|https://he.wikipedia.org/wiki/%D7%91%D7%A6%D7%A7_%D7%A8%D7%91%D7%95%D7%9A]].
+
+80 גרם חמאה חתוכה לקוביות
+כוס חלב
+שליש כוס מים
+שלושת רבעי כוס קמח מנופה
+3 ביצים
+כפית מלח מחוקה
+
+* מחממים את התנור לחום של 210 מעלות.
+* בסיר עם תחתית עבה מרתיחים תוך ערבוב את החלב, המלח והשמן.
+* כשהחלב מתחיל לרתוח מסירים את הסיר מהלהבה ומוסיפים את הקמח בבחישה מהירה עד לתערובת אחידה וחלקה ומופרדת מדפנות הסיר. 
+* מעבירים את התערובת לקערה, וטורפים פנימה את הביצים בזו אחר זו.
+* מעבירים את הבצק לשקית זילוף עם פיית זילוף בצורת כוכב ובתבנית גדולה מרופדת בנייר אפייה מזלפים פחזניות בקוטר ארבעה ס&quot;מ ובמרווחים גדולים.
+* אופים 10 דקות, מנמיכים את חום התנור ל-170 מעלות, משאירים את דלת התנור מעט פתוחה, וממשיכים באפייה של עוד כ-20 דקות, עד שהפחזניות יציבות וחלולות.
+*מצננים על רשת עד למילוי.
+
+חיבור:
+
+כשהפחזניות מוכנות ומצוננות חותכים כל אחת מהן לרוחבה וממלאים בכבד קצוץ. אוכלים מיד או אורזי
+ם ושומרים במקרר עד להגשה.
+
+מגישים אותן עם [[חזרת]].
+
+</pre>
 </div>
 <div created="20170401151233604" modified="20170401161420269" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
