עיר בנויה מרחובות

--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>עורכת הדין</li>
 
+<li>עיר בנויה מרחובות</li>
+
 <li>עץ המשפחה של אווה</li>
 
 <li>פאי פקאן עם קרמל</li>
@@ -8284,7 +8286,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="חזרת [[האחיות כהן]]" title="$:/StoryList">
+<div list="גורה [[עיר בנויה מרחובות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8304,8 +8306,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170411133339774" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170411202923223" title="$:/temp/search">
+<pre>גורה</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8778,7 +8780,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170401203054665" tags="[[נאמני הגנזך]]" title="גורה">
+<div created="20161026214951927" modified="20170411203319790" tags="[[נאמני הגנזך]]" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -8790,10 +8792,11 @@ Error message and password prompt
 
 את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה. כן, היא אמרה לי שכבר כמה ימים היא מנסה לצייר את עצמה אבל לא הולך לה.
 
-היא בת הזקונים להורי, דינה ז&quot;ל ויואל שיבדל&quot;ח, שהולידו את חמישתנו: [[נדיה]], [[קרן]], [[אותי|יויו]], את [[גיגי]] ואת הגורה.
+היא בת הזקונים להורי, דינה ז&quot;ל ויואל שיבדל&quot;ח, שהולידו את חמישתנו: [[נדיה]], [[קרן]], [[אותי|יויו]],  [[גיגי]] ואת הגורה.
 
+אחרי שנפצעה [[כתבה|עיר בנויה מרחובות]] וקראה כל הזמן.
 
-מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.</pre>
+וגם עכשיו - מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.</pre>
 </div>
 <div created="20170401203113923" modified="20170401214833936" title="גיגי">
 <pre>[img[pictures/gigi.jpg]]
@@ -9668,8 +9671,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
 </div>
 <div created="20170411155118410" modified="20170411160253199" title="חזרת">
-<pre>
-[img[pictures/chazeret.jpg]]
+<pre>[img[pictures/chazeret.jpg]]
 
 [[!!!אנג'ליק]]:
 
@@ -10703,6 +10705,41 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[גורה]]:
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
+</div>
+<div created="20170411211723019" modified="20170411212817850" title="עיר בנויה מרחובות">
+<pre>
+[img[pictures/ir-bnooya.jpg]]
+
+!!![[אירי]]:
+
+[[לסיפור שאווה כתבה|הסיפור על גורה, שסופר לאווה, על ידי יויו]] יש היסטוריה.
+
+כלומר, יויו הגיע אלי לפריז רגע לפני התאונה שקרתה לי, אך התאונה הזו - שנבעה מהתקף חרדה תכלס - התרחשה אחרי תקופה ארוכה בה לקחתי הרבה מאד כדורים, בולים, נוזלים, תמהילים, משקאות, פטריות הזייה ועוד.
+
+את הסיפור שבקרוב מאד אעתיק לעמוד זה כתבתי קצת אחרי שהגעתי לפריז. ז'נבייב מוזכרת בו והדירה שגרתי בה בהתחלה. זה היה בלילה בו הלכתי לחבר מהלימודים והוא נתן לי חתיכת קרטון וזה מה שיצא.
+
+השארתי אותו כמו שהוא כדי שאפשר יהיה לראות מה מתלהבת והזויה כאחד הייתי:
+
+ עיר בנויה מרחובות
+
+כל בוקר אני צועדת ברחובות העיר לפחות שעה.
+אני עושה את זה בקצב דיי מהיר, מבטי חולף על פני המראות וקולט מה שקולט. זו הליכה מעוררת השראה.
+רחוב החלונות היפים הצבעוניים הוא הראשון במסלולי. אני גרה בקומה חמישית. בערך חמש לפנות בוקר, בכל בוקר, ריח קרואסונים עולה במדרגות ישירות מהקונדיטוריה שלמטה בבניין וחודר לביתי. אני לא יודעת איך אך הוא חודר גם לביתי. חודר את הדלת. אולי דרך המנעול הוא משתחל לו. כשהוא שם הוא מתפרץ לדלתי הנעולה. בקלות הוא חודר לאפי הפתוח. אני מתעוררת מתאווה אליו, וכבר שנתיים מה שעוזר לי להתעורר בדילוג היא הידיעה שאחרי ההליכה אוכל קרואסון ואשתה קפה חזק וטעים שמשתחל לי את היקיצה.
+
+זה הולך ככה. הריח מתפתל אל פנים הבית, דרך הכניסה, המסדרון, חולף על פני דלת השירותים, חולף על פני חדר העבודה, מישיר אל אפי, ממשיך אל חדרי, בפס ישר וצר מגיע עד לנחירי, שם מתפצל לשניים שנכנסים, הם מתאחדים בחלק העליון של האף, עד שנוגעים בתא עצב, לוחשים לו...הגענו...תא עצב מעביר זאת מיד לתא שלידו, ככה עובר הריח מעצב לעצב, מגיע למרכז שם קולט אותו חוש הריח. חוש הריח דופק לי בחלום לוחש...הם הגיעו...אני עוד לא יודעת שאני כבר מתעוררת. הראות עולות סופגות, מתמלאות...נעים...באיזה רגע ממש לא ברור, דיי דומה לרגע הלא ברור של ההרדמות, אני יודעת שהתעוררתי, מזהה את הניחוח, יודעת שעכשיו אקום בשקט לשירותים, הריח ילך עמי, ידגדג לי את קצה האף, חוש הריח ימשיך להתפצל בראשית חוטמי ומתאחד בתוכו, אני מתארגנת דיי מהר. מכינה קפה אגב שטיפת הפנים, שותה אגב התלבשות זריזה ונעילת נעלי ההליכה בולמות הזעזועים, הריח לא עוצר, רק ריחות משחת השיניים וקפה הבוקר לרגעים מטשטשים אותו, ואז הוא יורד איתי מטה במדרגות הלולייניות, כמו התגלשות מהירה כזו צעד צעד צעד צעד, הוא מלווה אותי בערך עד אמצע רחוב החלונות היפים משם הוא חוזר לקונדיטוריה ואני פונה ימינה לרחוב הרהיטים הכבדים. למזלי ברחוב החלונות הכבדים יש לי רק 300 פסיעות פלוס מינוס, זה תלוי כמה אנשים צועדים על המדרכות וכאלה, כמה סרפנטיניות בצעידה, אחריהן אני יכולה לשכוח שוב עד מחר מהרהיטים החומים הקודרים, אחרי 300 פסיעות בערך אני שוב פונה ימינה לרחוב ארוך ארוך שהוא בעצם מקביל לרחוב שלי, רחוב החלונות היפים, זהו הרחוב הצבעוני, ממנו יש המוני פניות לשני הצדדים , כמובן, לרוב אני עושה בעצם מעין סיבוב, כלומר פוסעת אותו כמעט עד הקצה ושם זה עוד פעמיים ימינה עד חזרה אליי הביתה. כאמור פס הריח ואני צועדים לרחוב הרהיטים הכבדים, וכפי שכבר נכתב שם הוא חוזר, אני זוכרת אותו בשקידה למשך כל 300 הפסיעות של הקדרות החומה, ומבעוד מועד מריחה את שלל הצבעים בהם אחזה בקרוב מאד. בפינה של רחוב הרהיטים הכבדים והרחוב הצבעוני יש קיוסק חללי צבוע בפסים מטאליים של אדום ירוק וצהוב, אני יודעת שזה אולי נשמע שילוב צבעים גרוע ולא מלטף את אישונים, אך המתכתיות היא מה שהופך את השילוב לכן טוב, לקיוסק שלט ניאון באותם צבעים חזקים: &quot;לכודים בחלל&quot; מהבהב בחיוך, ומזמין לקנות מלא דברים לא בריאים, ממכרים, סוכר, סיגריות, הכול ארוז מספיק טוב כך שהריח שם אינו האטרקציה, כרגע עובדת שם בחורה צעירה חייכנית בסביבות גיל 20, עם בטן מושלמת, אנחנו מסמנות חיוכים זו אל זו, ואז יש שם מגוון סוגי חנויות, הסינית המהירה הקטנה עם הנודלס הכי טובים שיש, החלון הקטן עם הזונה השחורה עם הירכיים והשפתיים הענקיות, החנות של צעיפי הפרווה הסינטטית, החנות הציורית פתאום של האישה הגרושה ,אם לשתי בנות שמגישה כל צהריים מנות של קוסקוס ומרק שהיא מכינה, מיץ ותה וכמה שולחנות שכל אחד מהם בפורמייקה בצבע חזק שונה, ומלבדם הכול לבן ורק הפריטים הקטנים שעל השולחנות צבעוניים, שם לפעמים אני סועדת ואוהבת לדבר איתה, ואז הבוטיק של נעלי הפלטפורמה הכי גבוהות (הזונה השחורה עם הירכיים הענקיות נועלת תמיד כאלה שמתאימות לה לשורטס מהסקיי), ואז הבחור המוזר ההוא עם החנות למדים לפי מידה, כזה מן כאילו חתיך, כאילו גברי, כאילו אוהב נשים, עומד בחנות מלאה גלילי טוויד דחוסים שנולדים ספוגי אבק בכחול עייף וחאקי משועמם, או בדי דיאולן באותם גוונים רק פחות ספוגי אבק, וכובעי צבא, וכפתורים חמורי סבר. בצעידת הבוקר אני לא ממש נעצרת על כל דמות ודמות, רק עיני נחות על פה ועל שם, ומיד מעוררות איזו תגובה מתוך ההכרות הקודמת שלי עם כל דלת וחלון ראווה של החלון הצבעוני, ובכלל, שני צדדים לרחוב, לרוב אני צמודה לימין, אך ישנם בקרים בהם אני מחליטה לצעוד בצד שמאל, גם שם מיני זבנים ופריטים, בתוך הצעידה אני מודעת לגופי הצועד,לפעמים בודקת שכפות הרגליים מקבילות זו לזו, צועדות על פסי רכבת סמויים שרוחבם קבוע, מקבילים לעד, חושבת על פעמה פנימית שמכה קלות עם כל העברת משקל מהבטן התחתונה לכוון בית החזה, עוזרת לנעלי ההליכה לבלום את הזעזועים מהמפגש של כפות הרגלים והמדרכה תוך צעידה די מהירה. ישנם כעשרה רחובות שפונים ימינה, אני חוצה את רחוב הרהיטים הקלים, רחוב המנורות המסנוורות ...לבסוף פונה ימינה לרחוב העפרונות, שהוא רחוב קסום באמת, למשל באחת החנויות ישנם עפרונות ארוזים בקופסאות פלסטיק מעוצבות עליהן כל מיני הדפסים מסיפורי ילדים, ויש כאלה עם דוגמאות של צורות שחוזרות על עצמן, הפיתויים גדולים, אך דרכי להתמודד עם התאווה לכל הייתה לחלוף על פניהם ולהכירם היטב, מכאן כבר הייתי קרובה הביתה ימינה אל הריח המוכר שבקרוב מאד יגיע שוב אל אפי, חוצה את הכביש למדרכה השמאלית, מברכת את נוני מהדוכן עיתונים, אני ושובל ריח נכנסים לקונדיטוריה של אניקה ושרה, הפעמון מעל המשקוף מודיע, ואני קוראת:&quot;הגענו! בוקר טוב! אני ושובל הנאמן! שמודיע בשמכן לכל מי שעובר על המאפים הממכרים שלכן!&quot;..הן מחייכות, מגישות לי קרואסון וקפה חזק וטעים, אני לוגמת ולועסת, והן עסוקות ללא הרף, נכנסות ויוצאות מן המטבח, מכינות קפה, מקישות על הקופה, מברכות את כולם ליומם, אחר כך אני מטפסת למעלה בריצה שגומרת לי סופית את האוויר בגלגלים, ומכאן ממשיך יומי, שהוא לא מה שרציתי לספר לכם, למרות שאין לי כל בעיה לספר לכם על שגרת היומיום שלי, אך לא לשם כך כתבתי את כל המילים עד כה.
+רציתי לספר על מקרה שקרה לי באחד הבקרים. כמובן קמתי והכול היה כרגיל, לא חשבתי שאני קמה ליום אחר, לא קיצצתי מאף פעולת בוקר, פעולותיי זרמו בנחת, זמני היה רחב בידי, שובל ריח העירני כרגיל, ברכות, חוטמי המפונק מסר את ההודעה בדבר הגעתו של השובל בנחת, ההכרה בדבר התעוררותי הגיעה, וככה מדלגת מטה, נפרדתי משובל בפנייה לרהיטים כבדים, ושם פתאום חשבתי שאולי היום אחרוג ממנהגי ואמשיך קצת הלאה ברהיטים כבדים, חשבתי שאני חסונה מספיק לספוג מהקדרות בלי להתקדר אני,ו גם ידעתי שיש שם את העצי הדר מהפלסטיק בכניסה לרחוב אשר על פניו חלפתי לפני כמה שבועות לראשונה, הייתה לי בלימה תמיד מלהיכנס לרחוב רהיטים כבדים, בכל אופן, הלכתי כשראשי מביט על המדרכה, צועדת במרוצה שמא תדבק אלי קדרות, ידעתי שיש לי לפחות עשר דקות הליכה עד לרחוב עצי ההדר, הלכתי והתחזקתי, בחושי זכרתי את שובל ריח, הרגשתי שאני יכולה להישיר מבטי אל פני הרחוב, הרחובות החוצים את רהיטים כבדים הלכו והתבהרו, סקרנותי גברה, רציתי להיכנס לכולם, אך הייתי נחושה, חלפתי על פני רחוב פרות וירקות כתומים, עוד חלפתי על פני רחוב עלי שלכת, שרתה שם עצבובית מתוקה, ורחוב פרחי בר, שם הריח הכה בבום בקולטני הריח שלי, וכבר ראיתי את העלים הירוקים והפרות הצהובים כתומים של רחוב הפרדס, בכניסה עמד שומר, זה היה מן פסאז' מקורה בזכוכית שקופה מעוגלת, הוא לא היה צריך לבדוק מאומה, היינו רק אני וגופי ובגדי ההליכה והנעליים עם הבולמים, חציתי את קו הכניסה, הריצוף היה באריחים קטנים של אבן צהבהבה-פסטל, מרובעים, עצי הפלסטיק היו טמונים בתוך יציקות פלסטיק ורודות-פסטל, ורוד בהיר מאד, והיו המוני פניות לרחובות, רחוב תשוקה, רחוב ההיכלות, רחוב חלימה, רחוב רמזים, הכל במרחקים של מטרים, שלטים ברורים ציינו שם כל סמטה כזו, הסתובבתי חזרה לרגע, כי ליד הכניסה היה דוכן למיץ הדר, ביקשתי מיץ תפוזים סחוט, רגע לפני שאכנס, ההליכה המואצת, הקרואסון והקפה יחכו היום עוד כמה רגעים, לגמתי בפעם אחת את מיץ המרווה, לאט הרמתי את עיני והבטתי עמוקות סביבי, התלבטתי בין התשוקה לרחוב רמזים, רחוב רמזים משך אותי כי היו לי כמה שאלות חשובות וחשבתי שאולי אוכל לקלוט איזה רמז, אך רחוב תשוקה סקרן אותי יותר באותו רגע, וחשבתי שגם הוא יכול לחכות לי. בכניסה לרחוב תשוקה עמדה אישה נראית כבת שבעים עם ילד שנראה כבן עשר, הילד מסובב את המוסיקה שבוקעת מתיבת הנגינה הגדולה, האישה נעה ברכות מצד וצד אל הצלילים, היה צליל דומה לשל עוגב, לא יודעת מה הייתה המוסיקה, גם לא הספקתי לברר עד עכשיו, אך הייתה מנגינה ענוגה, האישה תוך כדי תנועה פזמה מנגינה משל עצמה, ברחש כמו של מים שזורמים...
+
+פתאום...כמו פרח...צליל חדש,,,פתאום...פתאום...פתאום כמו פרח...צליל חדש...אחר כל כך...ככה קרה...נחו עיני על משהו חדש...לפתע פתאום צליל חדש...כי השירים קורים פתאום...ראיתי חלון ראווה גדול ועליו כתוב באותיות ישרות,בתכלת בהיר,לא אותיות גדולות,אותיות של טל ומטר,ארבע שורות לרוחב מרכז הזכוכית שלושה מילימטרים:
+
+~התחלה,הקשבה אהבה כמו הגדולים,מוסיקה היא תמיד לבד,מחפשים-הקשבה מבקשים-אהבה מנסים לבכות-אכזבה כמו ילדים,והמוסיקה היא תמיד לבד,איך זה שוב קורה מחדש,מי זה שבורא מחדש אהבה שבאה אל הלב,מתרגשת בי מחדש,מתעקשת בי מחדש אהבה שאין לה שם אחר~
+(עלי מהר ושלום ויינשטיין)
+
+מסביב לזכוכית הגדולה ואותיות התכלת הייתה מסגרת ברזל דקה יחסית , צבועה באדום, והשלט היה ענן פלסטיק ורוד ועליו היה כתוב בכחול:
+~מוסיקה ~ללב היא חודרת~
+זו הייתה חנות דיסקים
+פתאום...פתאום...הסתובבתי ורצתי במהירות...חזרה לרחוב רהיטים קודרים מחכה בריצה להגיעה כבר אל הרחוב הצבעוני, רצתי עוד ועוד, איברי נשלחו לכל עבר, בקושי נשמתי, הגעתי לפניה ימינה לרחוב העפרונות, בריצתי לא הבחנתי בשובל ריח שחיכה לי במעבר החצייה שממול לדוכן העיתונים של נינו. הוא רץ איתי מבלי ששמתי לב אליו, נופפתי מהר לשלום לכולם, גם לאניקה ושרה מבעד לחלון הקונדיטוריה, הן לא ראו אותי, אני לא ראיתי את שובל, טיפסתי מהר אל ביתי, פתחתי את הדלת במהרה, אפילו קצת בחוזקה, דרך הכניסה והמסדרון, מהר זרקתי גופי על המיטה, כיסיתי את עיני בשתי ידי חזק, רציתי חושך, רציתי לא לראות את כל המחשבות המציפות מבלי לראות דבר ולראות נכוחה...שכבתי ככה, הלמות לבי אט אט פסקה, התחלתי לנשום, נזכרתי בקדרות של רחוב רהיטים קודרים, שפתי קפצו קדימה, נזכרתי ביפי רחוב עלי שלכת, התרככתי קצת, הפה מעט רפה, נזכרתי בתנועותיה של האישה שנעה לצלילי תיבת הנגינה , מוסיקה חדרה ללבי, מילאתי פי מים, לאט פקחתי עיני, שמעתי את בטני המקרקרת, שובל ריח עלה באפי, זה כבר היה ריחו של בריוש, הבטתי אל תקרת חדר השינה שלי, הסתובבתי, קמתי, חייכתי, חיוך גדול חייכתי, שמחתי, התלבשתי יפה, בבגדים רכים וחמימים, דילגתי מטה על פני המדרגות הלולייניות, ניגשתי לדוכן העיתונים של נינו וקניתי עיתון וגם מגאזין מוסיקה, נכנסתי לאניקה ושרה, הן אמרו ששובל ריח קרואסון הבין אותי, הן שמעו אותו אומר לשובל ריח בריוש שיקבל את פני, הזמנתי בריוש וספל של אותו קפה כמו בכל יום, ישבתי שם וישבתי, והחלטתי שהיום לא אתנהל באופן שגרתי...נפרדתי לשלום מאניקה ושרה, שובל ריח ליווה אותי עד לרחוב רהיטים כבדים, קרן שמש האירה את הרחוב, פסעתי בוטחת אל רחוב פרדס, חשבתי שאם יוותר לי זמן אור אלך גם לרחוב עלי שלכת ולרחוב פרחי בר, אולי בפרחי בר אוכל ארוחה עיקרית, אך נחושה לרחוב רמזים..לא מפחדת...ולדעת...דבר מה אחר... 
+
+</pre>
 </div>
 <div created="20161218191604654" modified="20170326091934178" title="עץ המשפחה של אווה">
 <pre>[img[https://i.imgur.com/EmPzZIq.jpg)]]
