--- a/index.html
+++ b/index.html
@@ -8286,7 +8286,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גורה [[עיר בנויה מרחובות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8306,8 +8306,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170411202923223" title="$:/temp/search">
-<pre>גורה</pre>
+<div created="20161023184814872" modified="20170411213029825" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -10707,8 +10707,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
 <div created="20170411211723019" modified="20170411212817850" title="עיר בנויה מרחובות">
-<pre>
-[img[pictures/ir-bnooya.jpg]]
+<pre>[img[pictures/ir-bnooya.jpg]]
 
 !!![[אירי]]:
 
