--- a/index.html
+++ b/index.html
@@ -433,6 +433,8 @@ Error message and password prompt
 
 <li>צ'נג</li>
 
+<li>צלי בשר עם תפוחי אדמה</li>
+
 <li>קואנג</li>
 
 <li>קפה מילר</li>
@@ -8286,7 +8288,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[צלי בשר עם תפוחי אדמה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9001,7 +9003,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170401163306347" title="האחיות כהן">
+<div created="20161111215423587" modified="20170412150313991" title="האחיות כהן">
 <pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
 
 
@@ -9670,10 +9672,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
 </div>
-<div created="20170411155118410" modified="20170411160253199" title="חזרת">
+<div created="20170411155118410" modified="20170412150752007" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
 
-[[!!!אנג'ליק]]:
+!!![[אנג'ליק]]:
 
 
     200 גרם שורש חזרת טרי
@@ -9738,7 +9740,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170411133229544" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170412150714063" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9770,7 +9772,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[גרטן תפו&quot;א]] - דניאל  
 * [[פחזניות ממולאות בכבד קצוץ]] - אנג'ליק 
 * [[צנצנת עם חזרת]] - אנג'ליק
-* צלי בשר עם תפוחי אדמה - סוניה
+* [[צלי בשר עם תפוחי אדמה]] - סוניה
 * חמוצים סיניים - גואן יין
 * תרנגול הודו אפוי - ז'נבייב
 *קוסקוס - ז'נבייב 
@@ -10956,6 +10958,41 @@ Fapina''
 !!![[גורה]]:
 
 צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
+</div>
+<div created="20170412170336651" modified="20170412173140087" title="צלי בשר עם תפוחי אדמה">
+<pre>
+
+[img[pictures/zli-bakar.jpg]]
+
+!!![[סוניה]]:
+
+סיר גדול מספיק
+
+* 4 כפות חמאה
+* נתח של שריר קדמי של עגל לצלי במשקל של לפחות 
+קילו וחצי
+* שישה-שמונה תפוחי אדמה קטנים מהסוג האדום
+* שני בצלים בינוניים
+* כרישה 
+* שני גזריםגזרים
+* אני שוםרבע שי
+* שתי כפות חרדל
+* שורש פטרוזיליה
+* שני חבושים 
+* בקבוק יין אדום
+* רבע כוס דבש
+*מעט קינמון (אפשר גם מקלות קינמון)
+* שני עלי דפנה
+* פלפל שחור גרוס 
+* מלח גס
+* מים לכיסוי הנתח בעת הבישול
+
+
+
+* מחממים את הסיר, מכניסים לתוכו את החמאה, &quot;עוזרים&quot; לה להינמס בעזרת כף עץ, ומניחים עליה את חתיכת הבשר ואת השום.
+* לאט לאט מכינסים את כל הירקות ואת החבושים כשהם קלופים אך שלמים, צולים אותם מכל הכוונים ומכבים את הלהבה.
+* לאחר שהצלי התקרר מעט (20 דקות), מוסיפים מים כדי כיסוי ומבשלים אותו מעל להבה נמוכה שעה.
+* לאחר שעה מערבבים בקערה את החרדל, היין, הדבש והתבלינים. מוסיפים אותם לצלי שעל הכיריים וממשיכים לבשל שלוש שעות נוספות לפחות.</pre>
 </div>
 <div created="20170323213155309" modified="20170323220314226" title="קואנג">
 <pre>[img[pictures/fPy4p4KI0ffJdhBs.jpg]]
