--- a/index.html
+++ b/index.html
@@ -8288,7 +8288,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[צלי בשר עם תפוחי אדמה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[צלי בשר עם תפוחי אדמה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9003,7 +9003,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170412150313991" title="האחיות כהן">
+<div created="20161111215423587" modified="20170412174526164" title="האחיות כהן">
 <pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
 
 
@@ -10959,20 +10959,18 @@ Fapina''
 
 צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
 </div>
-<div created="20170412170336651" modified="20170412173140087" title="צלי בשר עם תפוחי אדמה">
+<div created="20170412170336651" modified="20170412174642487" title="צלי בשר עם תפוחי אדמה">
 <pre>
-
 [img[pictures/zli-bakar.jpg]]
 
 !!![[סוניה]]:
 
 סיר גדול מספיק
 
-* 4 כפות חמאה
-* נתח של שריר קדמי של עגל לצלי במשקל של לפחות 
-קילו וחצי
+* ארבע כפות חמאה
+* שני קילוגרם של שריר קדמי של עגל.
 * שישה-שמונה תפוחי אדמה קטנים מהסוג האדום
-* שני בצלים בינוניים
+*  שני בצלים בינוניים
 * כרישה 
 * שני גזריםגזרים
 * אני שוםרבע שי
@@ -10987,7 +10985,7 @@ Fapina''
 * מלח גס
 * מים לכיסוי הנתח בעת הבישול
 
-
+אופן ההכנה:
 
 * מחממים את הסיר, מכניסים לתוכו את החמאה, &quot;עוזרים&quot; לה להינמס בעזרת כף עץ, ומניחים עליה את חתיכת הבשר ואת השום.
 * לאט לאט מכינסים את כל הירקות ואת החבושים כשהם קלופים אך שלמים, צולים אותם מכל הכוונים ומכבים את הלהבה.
