--- a/index.html
+++ b/index.html
@@ -8288,7 +8288,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[צלי בשר עם תפוחי אדמה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9740,7 +9740,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170412150714063" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170412175236298" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9782,7 +9782,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 * פבלובה - פיליפ
 * פאי דובדבנים - אווה
-* פאי פקאן עם קרמל 
+* [[פאי פקאן עם קרמל]]- אווה 
 * פאי אגסים עם קרם גבינה ושקדים - אווה
 * עוגת מוקה - אווה
 * פנטונה - סוניה 
@@ -10960,8 +10960,7 @@ Fapina''
 צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
 </div>
 <div created="20170412170336651" modified="20170412174642487" title="צלי בשר עם תפוחי אדמה">
-<pre>
-[img[pictures/zli-bakar.jpg]]
+<pre>[img[pictures/zli-bakar.jpg]]
 
 !!![[סוניה]]:
 
