--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@ Error message and password prompt
 
 <li>חזרת</li>
 
+<li>חמוצים סיניים</li>
+
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
 <li>יויו</li>
@@ -8288,7 +8290,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8679,7 +8681,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170407125610504" modified="20170407130244169" title="אספרגוס">
+<div created="20170407125610504" modified="20170412203453076" tags="[[מתכוני ארוחת הכריסמס]]" title="אספרגוס">
 <pre>[img[pictures/asparagus.jpg]]
 
 !!![[אווה]]:
@@ -8864,7 +8866,7 @@ Error message and password prompt
 
 געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
 </div>
-<div created="20170409193149814" modified="20170409203043858" title="גרטן תפו&quot;א">
+<div created="20170409193149814" modified="20170412203349046" tags="[[מתכוני ארוחת הכריסמס]]" title="גרטן תפו&quot;א">
 <pre>[img[pictures/gratin.jpg]]
 
 
@@ -9672,7 +9674,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
 </div>
-<div created="20170411155118410" modified="20170412150752007" title="חזרת">
+<div created="20170411155118410" modified="20170412203304600" tags="[[מתכוני ארוחת הכריסמס]]" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
 
 !!![[אנג'ליק]]:
@@ -9693,7 +9695,27 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170407152300115" modified="20170407153246036" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
+<div created="20170412203708355" modified="20170412211718078" tags="[[מתכוני ארוחת הכריסמס]]" title="חמוצים סיניים">
+<pre>[img[]]
+
+[[גואן-יין]]:
+
+בקערה גדולה:
+
+קורעים חתיכות כרוב שטוף, מפרקים כרובית שטופה לפרחים, פורסים שלושה מלפפונים שטופים ושני גזרים קלופים לעיגולים ומערבבים מעט עם הידיים או בעזרת שתי כפות גדולות ומוסיפים פלפל ירוק חריף פרוס לפרוסות.
+
+בסיר קטן מחממים עד לפני רתיחה:
+
+חצי כוס חומץ, שלושת רבעי כוס סוכר, כף גדושה של מלח גס, שלוש כוסות מים, 2 כפות פרוסות דקות של ג'ינג'ר טרי.
+
+מוזגים את נוזל החם על הירקות ומערבבים.
+
+מעבירים לצנצנות, סוגרים ומשאירים בחוץ עד שהירקות מגיעים לטמפרטורת החדר.
+
+מכניסים למקרר, ואפשר להתחיל לאכול יום-יומיים אחר כך.
+</pre>
+</div>
+<div created="20170407152300115" modified="20170412203424705" tags="[[מתכוני ארוחת הכריסמס]]" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
 
 !!![[אווה]]:
@@ -9740,7 +9762,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170412175236298" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170412203242184" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9773,7 +9795,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[פחזניות ממולאות בכבד קצוץ]] - אנג'ליק 
 * [[צנצנת עם חזרת]] - אנג'ליק
 * [[צלי בשר עם תפוחי אדמה]] - סוניה
-* חמוצים סיניים - גואן יין
+* [[חמוצים סיניים]] - גואן יין
 * תרנגול הודו אפוי - ז'נבייב
 *קוסקוס - ז'נבייב 
 * לזניה צמחונית  
@@ -10431,7 +10453,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170409072116141" modified="20170409181758192" title="מלפפונים חמוצים">
+<div created="20170409072116141" modified="20170412203328914" tags="[[מתכוני ארוחת הכריסמס]]" title="מלפפונים חמוצים">
 <pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
 !!![[אלפרד]]:
@@ -10578,7 +10600,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
-<div created="20170407131936343" modified="20170407134650524" title="סלט חסה">
+<div created="20170407131936343" modified="20170412203443275" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט חסה">
 <pre>[img[pictures/salat-chasa.jpg]]
 
 !!![[יויו]]:
@@ -10594,7 +10616,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מוזגים מעל שמן זית (כמה כפות), חומץ תפוחים (כפית) ומלח גס (קורט), מערבבים עם כפות הידיים בעדינות מהצדדים פנימה ומגישים.
 </pre>
 </div>
-<div created="20170407140441796" modified="20170407143300549" title="סלט מלפפונים עם בצל סגול ושמיר">
+<div created="20170407140441796" modified="20170412203433359" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט מלפפונים עם בצל סגול ושמיר">
 <pre>[img[pictures/salat-melafefonim.jpg]]
 
 !!![[יויו]]:
@@ -10605,7 +10627,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * בקערה קטנה מערבבים: רבע כוס שמן זית, כפית סוכר, כף חומץ, קורט מלח, קורט פלפל שחור ויוצקים מעל.
 * מערבבים מהחוץ לפנים ומגישים.</pre>
 </div>
-<div created="20170406150319861" modified="20170406151310640" title="סלט עגבניות עם שום">
+<div created="20170406150319861" modified="20170412203537645" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט עגבניות עם שום">
 <pre>[img[pictures/salat-agvanyot.jpg]]
 
 !!![[אווה]]:
@@ -10655,7 +10677,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170407122044551" modified="20170407123359731" title="סלק מבושל">
+<div created="20170407122044551" modified="20170412203503274" tags="[[מתכוני ארוחת הכריסמס]]" title="סלק מבושל">
 <pre>[img[pictures/selek.jpg]]
 
 !!![[אווה]]:
@@ -10670,7 +10692,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
-<div created="20170407192128538" modified="20170408225843404" title="עוגיות קימל">
+<div created="20170407192128538" modified="20170412203414991" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגיות קימל">
 <pre>[img[pictures/ugiyot-kimel.jpg]]
 
 !!![[אווה]]:
@@ -10848,7 +10870,7 @@ __אופן ההכנה____
 
 שם יויו דיבר עם [[אווה|אווה כהן]] בפעם הראשונה.</pre>
 </div>
-<div created="20170411134035592" modified="20170411155025630" title="פחזניות ממולאות בכבד קצוץ">
+<div created="20170411134035592" modified="20170412203318720" tags="[[מתכוני ארוחת הכריסמס]]" title="פחזניות ממולאות בכבד קצוץ">
 <pre>[img[pictures/pachzaniyot.jpg]]
 
 !!![[אנג'ליק]]:
@@ -10959,7 +10981,7 @@ Fapina''
 
 צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.</pre>
 </div>
-<div created="20170412170336651" modified="20170412174642487" title="צלי בשר עם תפוחי אדמה">
+<div created="20170412170336651" modified="20170412203254735" tags="[[מתכוני ארוחת הכריסמס]]" title="צלי בשר עם תפוחי אדמה">
 <pre>[img[pictures/zli-bakar.jpg]]
 
 !!![[סוניה]]:
@@ -10971,23 +10993,24 @@ Fapina''
 * שישה-שמונה תפוחי אדמה קטנים מהסוג האדום
 *  שני בצלים בינוניים
 * כרישה 
-* שני גזריםגזרים
-* אני שוםרבע שי
+* שני גזרים
+* ארבע שיני שום
 * שתי כפות חרדל
 * שורש פטרוזיליה
 * שני חבושים 
 * בקבוק יין אדום
 * רבע כוס דבש
-*מעט קינמון (אפשר גם מקלות קינמון)
+*מעט קינמון (אפשר גם מקל קינמון)
 * שני עלי דפנה
 * פלפל שחור גרוס 
 * מלח גס
 * מים לכיסוי הנתח בעת הבישול
 
 אופן ההכנה:
-
+* קולפים ומנקים את כל הירקות וגם את החבושים
 * מחממים את הסיר, מכניסים לתוכו את החמאה, &quot;עוזרים&quot; לה להינמס בעזרת כף עץ, ומניחים עליה את חתיכת הבשר ואת השום.
-* לאט לאט מכינסים את כל הירקות ואת החבושים כשהם קלופים אך שלמים, צולים אותם מכל הכוונים ומכבים את הלהבה.
+* לאט לאט מכינסים את  הירקות  החבושים בשלמותם,     
+וצולים אותם מכל הכוונים ומכבים את הלהבה.
 * לאחר שהצלי התקרר מעט (20 דקות), מוסיפים מים כדי כיסוי ומבשלים אותו מעל להבה נמוכה שעה.
 * לאחר שעה מערבבים בקערה את החרדל, היין, הדבש והתבלינים. מוסיפים אותם לצלי שעל הכיריים וממשיכים לבשל שלוש שעות נוספות לפחות.</pre>
 </div>
@@ -11375,7 +11398,7 @@ Fapina''
 הרוח בעץ.
 </pre>
 </div>
-<div created="20170408234445334" modified="20170409063342489" title="תבשיל שורשים ואורז בשלושה צבעים">
+<div created="20170408234445334" modified="20170412203404261" tags="[[מתכוני ארוחת הכריסמס]]" title="תבשיל שורשים ואורז בשלושה צבעים">
 <pre>[img[pictures/orez-bishlosha.jpg]]
 
 !!![[אלפרד]]:
