פאי דובדבנים וחמוצים סינים

--- a/index.html
+++ b/index.html
@@ -417,6 +417,8 @@ Error message and password prompt
 
 <li>עץ המשפחה של אווה</li>
 
+<li>פאי דובדבנים</li>
+
 <li>פאי פקאן עם קרמל</li>
 
 <li>פה</li>
@@ -8290,7 +8292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[פאי דובדבנים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9695,8 +9697,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170412203708355" modified="20170412211718078" tags="[[מתכוני ארוחת הכריסמס]]" title="חמוצים סיניים">
-<pre>[img[]]
+<div created="20170412203708355" modified="20170412223649148" tags="[[מתכוני ארוחת הכריסמס]]" title="חמוצים סיניים">
+<pre>[img[pictures/chamoozim-sinim.jpg]]
 
 [[גואן-יין]]:
 
@@ -9762,7 +9764,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170412203242184" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170412223736182" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9803,7 +9805,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * עיגולי מרציפן - ז'נבייב 
 
 * פבלובה - פיליפ
-* פאי דובדבנים - אווה
+* [[פאי דובדבנים]] - אווה
 * [[פאי פקאן עם קרמל]]- אווה 
 * פאי אגסים עם קרם גבינה ושקדים - אווה
 * עוגת מוקה - אווה
@@ -10813,6 +10815,61 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 אראה לך את עץ המשפחה שלי.
+
+</pre>
+</div>
+<div created="20170412224620608" modified="20170413074421255" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי דובדבנים">
+<pre>
+[img[pictures/pie-duvdevanim.jpg]]
+
+
+
+!!![[אווה]]:
+
+הפאי הזה בנוי מתחתית בצק פריך עם שקדים, מלית דובדבנים מבושלת שעשויה מדובדבנים חמוצים ומגולענים שקונים בצנצנות וקישוט מהבצק של התחתית. מעל כל אלה מפזרים שקדים מולבנים פרוסים, ומכניסים לתנור.
+
+אם כן, ב[[מיזונפלציה]], הכינו גם שקדים מולבנים פרוסים בהם תשתמשו אחרונים.
+
+
+בצק פריך שקדים:
+
+120 גרם שקדים טחונים
+200 גרם חמאה
+כוס סוכר
+5חלמונים
+מיץ מחצי לימון
+שקיק סוכר וניל
+2 כוסות ושני שליש כוס קמח לבן מנופה
+כפית מחוקה אבקת אפייה
+
+1. לתוך מעבד מזון מכניסים את השקדים וטוחנים לאבקה
+2. מוסיפים את החמאה והסוכר וממשיכים לעבד עד לקבלת משחה חלקה.
+3. מוסיפים את שאר החומרים ומערבלים עד לקבלת כדור בצק.
+
+
+מילוי דובדבנים מבושל:
+
+2 צנצנות דובדבנים חמוצים ללא חרצנים
+1 כוסות מהמיץ
+1 כוסות יין אדום
+כף קינמון
+ 2כפות קורנפלור
+2 כפות סוכר
+
+
+1.לסנן את הדובדבנים ולשמור בצד
+2. לבשל את המיץ עם היין, הקינמון, הקורנפלור והסוכר תוך כדי בחישה עד לקבלת מרקם סמיך 
+3.להסיר מהאש, להוסיף את הדובדבנים ולקרר
+
+הרכבת העוגה:
+
+1.לחמם תנור לחום בינוני (170 מעלות)
+2.לשטח שני שלישים מהבצק בתבנית 24 עגולה כולל הדפנות
+3.למלא במילוי דובדבנים
+4.לקשט בשליש הבצק הנותר מלמעלה
+5.לפזר שקדים מולבנים פרוסים
+6.לאפות 40 דקות בערך, עד שמזהיב יפה יפה.
+
 
 </pre>
 </div>
