--- a/index.html
+++ b/index.html
@@ -8294,7 +8294,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[עוגת מוקה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגת מוקה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10727,9 +10727,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170413101450070" modified="20170413101654662" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
-<pre>
-[img[pictures/ugat-moka.jpg]]
+<div created="20170413101450070" modified="20170413111630255" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
+<pre>[img[pictures/ugat-moka.jpg]]
 
 
 !!![[אווה]]:
@@ -10737,59 +10736,75 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 עוגת מוקה: תבנית עגולה 28 או תבנית מרובעת בהתאמה.
 
 החומרים :
-50 גרם פקאנים
-2 מיכלי שמנת מתוקה
-2 כפיות נס קפה
-11 כפות סוכר
-200 גרם חמאה
-3 חלמונים
-כוס ו 2 כפות קמח
-כפית וקורט אבקת אפיה
-100 גרם שוקולד מריר
-כף וחצי מים
+
+* 50 גרם פקאנים
+* שני מיכלי שמנת מתוקה
+* 2 כפיות נס קפה
+* 11כפות סוכר
+* 200 גרם חמאה
+* 3חלמונים
+* כוס ו 2 כפות קמח
+* כפית אבקת אפיה
+* 100 גרם שוקולד מריר
+* כף וחצי מים
 
 
-שלב א': (הכנת הקצפת מוקה שצריכה לנוח במקרר לפחות שש שעות)
-להרתיח 2 כוסות שמנת מתוקה + 2 כפיות נס קפה ו+ כפות סוכר ולקרר שש שעות לפחות
+שלב א': 
 
-שלב ב': (בסיס מוקה)
-50 גרם פקאנים טחונים
-1/2 כוס סוכר
-100 גרם חמאה
-1 חלמון
-1 כוס קמח
-חצי כפית אבקת אפיה
+(הכנת הקצפת מוקה שצריכה לנוח במקרר לפחות שש שעות)
+* להרתיח 2 כוסות שמנת מתוקה + 2 כפיות נס קפה ו+ כפות סוכר ולקרר שש שעות לפחות
 
-אופן ההכנה:
-במעבד מזון לטחון פקאנים + סוכר 
-להוסיף את החמאה ולהמשיך עד לקבלת משחה חלקה
-להוסיף ביצים קמח ואבקת אפייה ולעבד עד כדור חלק .
-לשטח לבסיס בתוך תבנית מרופדת בנייר אפייה ולאפות כעשר דקות ב 170 מעלות צלזיוס .
+שלב ב': 
 
-שלב ג': בסיס (פאדג')
-100 גרם שוקולד
-2 חלמונים
-כף וחצי מים
-100 גרם חמאה
-3 כפות סוכר
-2 כפות קמח
+(בסיס מוקה)
+* 50גרם פקאנים טחונים
+* חצי כוס סוכר
+* 100 גרם חמאה
+* חלמון אחד
+* כוס קמח
+* חצי כפית אבקת אפיה
 
 אופן ההכנה:
-ממיסים את השוקולד עם המים תוך בחישה
-מוסיפים לשוקולד תוך טריפה את החלמונים,
-מקציפים את החלבונים עם חצי כוס סוכר (6 כפות), 
-מקפלים שוקולד עם קצף החלבונים זה לתוך זה
-אופים ב 170 מעלות כעשר דקות
+
+* טוחנים פקאנים וסוכר במעבד מזון 
+* מוסיפים את החמאה וממשיכים לעבד עד לקבלת משחה חלקה
+* מוסיפים ביצים קמח ואבקת אפייה ומעבדים עד כדור חלק .
+* משטחים לבסיס בתוך תבנית מרופדת בנייר אפייה ואופים כעשר דקות ב 170 מעלות צלזיוס .
+
+שלב ג': 
+
+(בסיס פאדג')
+
+* 100גרם שוקולד
+* 2 חלמונים
+* כף וחצי מים
+* 100 גרם חמאה
+* 3 כפות סוכר
+* 2כפות קמח
+
+אופן ההכנה:
+
+* ממיסים את השוקולד עם המים תוך בחישה
+* מוסיפים לשוקולד תוך טריפה את החלמונים
+* מקציפים את החלבונים עם חצי כוס סוכר (6 כפות), 
+* מקפלים שוקולד עם קצף החלבונים זה לתוך זה
+*אופים ב 170 מעלות כעשר דקות
 
 שלב ד': (הרכבת העוגה)
 
-1.	מקציפים את הקצפת עם הקפה שהייתה במקרר עד לקצפת חזקה – אך לא יותר מידי
-2.	מניחים בתחתית התבנית בה אפינו את הבסיסים את בסיס השוקולד פאדג'
-3.	מורחים על בסיס הפאדג' חצי מכמות הקצפת-מוקה
-4.	על שכבת המוקה הראשונה מניחים את בסיס החמאה פקאן
-5.	מורחים את הקצפת שנותרה על הבסיס השני ומחליקים את פני הקצפת
-6.	לקישוט גוררים פרורי שוקולד מעל העוגה
-7.	עוטפים ומכניסים למקרר לשש שעות לפחות עד להגשה
+1. מקציפים את הקצפת עם הקפה שהייתה במקרר עד לקצפת חזקה – אך לא יותר מידי
+
+2. מניחים בתחתית התבנית בה אפינו את הבסיסים את בסיס השוקולד פאדג' 
+
+3. מורחים על בסיס הפאדג' חצי מכמות הקצפת-מוקה
+
+4. על שכבת המוקה הראשונה מניחים את בסיס החמאה פקאן
+
+5. מורחים את הקצפת שנותרה על הבסיס השני ומחליקים את פני הקצפת
+
+6. לקישוט גוררים פרורי שוקולד מעל העוגה
+
+7. עוטפים ומכניסים למקרר לשש שעות לפחות עד להגשה
 
 </pre>
 </div>
