המשך עריכת מוקה

--- a/index.html
+++ b/index.html
@@ -10727,7 +10727,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170413101450070" modified="20170413111630255" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
+<div created="20170413101450070" modified="20170413112134279" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
 <pre>[img[pictures/ugat-moka.jpg]]
 
 
@@ -10735,7 +10735,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 עוגת מוקה: תבנית עגולה 28 או תבנית מרובעת בהתאמה.
 
-החומרים :
+החומרים  לכל העוגה:
 
 * 50 גרם פקאנים
 * שני מיכלי שמנת מתוקה
@@ -10752,11 +10752,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 שלב א': 
 
 (הכנת הקצפת מוקה שצריכה לנוח במקרר לפחות שש שעות)
-* להרתיח 2 כוסות שמנת מתוקה + 2 כפיות נס קפה ו+ כפות סוכר ולקרר שש שעות לפחות
+
+* להרתיח 2 כוסות שמנת מתוקה + 2 כפיות נס קפה עם 4 כפות סוכר ולקרר שש שעות לפחות
 
 שלב ב': 
 
 (בסיס מוקה)
+
 * 50גרם פקאנים טחונים
 * חצי כוס סוכר
 * 100 גרם חמאה
@@ -10766,10 +10768,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אופן ההכנה:
 
-* טוחנים פקאנים וסוכר במעבד מזון 
-* מוסיפים את החמאה וממשיכים לעבד עד לקבלת משחה חלקה
-* מוסיפים ביצים קמח ואבקת אפייה ומעבדים עד כדור חלק .
-* משטחים לבסיס בתוך תבנית מרופדת בנייר אפייה ואופים כעשר דקות ב 170 מעלות צלזיוס .
+1. טוחנים פקאנים וסוכר במעבד מזון 
+2. מוסיפים את החמאה וממשיכים לעבד עד לקבלת משחה חלקה
+3.  מוסיפים ביצים קמח ואבקת אפייה ומעבדים עד כדור חלק .
+4.משטחים לבסיס בתוך תבנית מרופדת בנייר אפייה ואופים כעשר דקות ב 170 מעלות צלזיוס .
 
 שלב ג': 
 
@@ -10784,11 +10786,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אופן ההכנה:
 
-* ממיסים את השוקולד עם המים תוך בחישה
-* מוסיפים לשוקולד תוך טריפה את החלמונים
-* מקציפים את החלבונים עם חצי כוס סוכר (6 כפות), 
-* מקפלים שוקולד עם קצף החלבונים זה לתוך זה
-*אופים ב 170 מעלות כעשר דקות
+1. ממיסים את השוקולד עם המים תוך בחישה
+2. מוסיפים לשוקולד תוך טריפה את החלמונים
+3. מקציפים את החלבונים עם חצי כוס סוכר (6 כפות), 
+4. מקפלים שוקולד עם קצף החלבונים זה לתוך זה
+5. אופים ב 170 מעלות כעשר דקות
 
 שלב ד': (הרכבת העוגה)
 
